# serializer version: 1
# name: test_all_entities[da_rvc_map_01011][vacuum.robot_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.robot_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12308>,
    'translation_key': None,
    'unique_id': '05accb39-2017-c98b-a5ab-04a81f4d3d9a_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_map_01011][vacuum.robot_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Robot vacuum',
      'supported_features': <VacuumEntityFeature: 12308>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.robot_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][vacuum.robot_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.robot_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12308>,
    'translation_key': None,
    'unique_id': '3442dfc6-17c0-a65f-dae0-4c6e01786f44_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][vacuum.robot_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Robot vacuum',
      'supported_features': <VacuumEntityFeature: 12308>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.robot_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
